<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dept"
        app:layout_constraintBottom_toBottomOf="@+id/textProfileDept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textProfileDept" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ID"
        app:layout_constraintBottom_toBottomOf="@+id/textProfileID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textProfileID" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        app:layout_constraintBottom_toBottomOf="@+id/textProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textProfileName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        app:layout_constraintBottom_toBottomOf="@+id/textProfileEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textProfileEmail" />

    <TextView
        android:id="@+id/textProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textProfileName"
        app:layout_constraintStart_toStartOf="@+id/textProfileName"
        app:layout_constraintTop_toBottomOf="@+id/textProfileName" />

    <TextView
        android:id="@+id/textProfileID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textProfileEmail"
        app:layout_constraintStart_toStartOf="@+id/textProfileName"
        app:layout_constraintTop_toBottomOf="@+id/textProfileEmail" />

    <TextView
        android:id="@+id/textProfileDept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textProfileID"
        app:layout_constraintStart_toStartOf="@+id/textProfileName"
        app:layout_constraintTop_toBottomOf="@+id/textProfileID" />
</androidx.constraintlayout.widget.ConstraintLayout>